--- a/final_api/Dockerfile
+++ b/final_api/Dockerfile
@@ -15,4 +15,4 @@ COPY . /app
 
 EXPOSE 8000
 
-CMD ["uvicorn", "final_api.main:app", "--host", "0.0.0.0", "--port", "8000"]
+CMD ["uvicorn", "api.fastapi_churn_day13:app", "--host", "0.0.0.0", "--port", "8000"]
